@@ -80,7 +80,8 @@ public class MinioTemplate implements InitializingBean {
                 makeBucket(name);
             }
         } catch (Exception e) {
-            e.printStackTrace();
+            // AI Agent: 使用SLF4J logger替代printStackTrace
+            log.error("检查bucket是否存在异常：", e);
         }
     }
 
@@ -89,14 +90,13 @@ public class MinioTemplate implements InitializingBean {
      *                   author: majf
      *                   return: java.lang.Boolean
      */
-    public Boolean makeBucket(String bucketName) {
+    public void makeBucket(String bucketName) {
         try {
             minioClient.makeBucket(MakeBucketArgs.builder().bucket(bucketName).build());
         } catch (Exception e) {
-            e.printStackTrace();
-            return false;
+            // AI Agent: 使用SLF4J logger替代printStackTrace
+            log.error("创建bucket异常：", e);
         }
-        return true;
     }
 
     /**
@@ -111,7 +111,8 @@ public class MinioTemplate implements InitializingBean {
                     .bucket(bucketName)
                     .build());
         } catch (Exception e) {
-            e.printStackTrace();
+            // AI Agent: 使用SLF4J logger替代printStackTrace
+            log.error("删除bucket异常：", e);
             return false;
         }
         return true;
@@ -161,10 +162,10 @@ public class MinioTemplate implements InitializingBean {
             // 获取文件对象
             inputStream = minioClient.getObject(GetObjectArgs.builder().bucket(bucketName).object(fileName).build());
             byte[] buf = new byte[1024];
-            int length = 0;
+            int length;
             response.reset();
             response.setHeader("Content-Disposition", "attachment;filename=" +
-                    URLEncoder.encode(fileName.substring(fileName.lastIndexOf("/") + 1), "UTF-8"));
+                    URLEncoder.encode(fileName.substring(fileName.lastIndexOf("/") + 1), StandardCharsets.UTF_8));
             response.setContentType("application/octet-stream");
             response.setCharacterEncoding("UTF-8");
             // 输出文件
@@ -183,7 +184,8 @@ public class MinioTemplate implements InitializingBean {
                 OutputStream ps = response.getOutputStream();
                 ps.write(data.getBytes(StandardCharsets.UTF_8));
             } catch (IOException e) {
-                e.printStackTrace();
+                // AI Agent: 使用SLF4J logger替代printStackTrace
+                log.error("文件下载异常 - 向响应写入错误信息失败：", e);
             }
         } finally {
             try {
@@ -194,15 +196,16 @@ public class MinioTemplate implements InitializingBean {
                     inputStream.close();
                 }
             } catch (IOException e) {
-                e.printStackTrace();
+                // AI Agent: 使用SLF4J logger替代printStackTrace
+                log.error("关闭文件流异常：", e);
             }
         }
     }
 
     /**
-     * @param bucketName
-     * @param fileName
-     * @param delete     description: 下载文件流
+     * param bucketName
+     * param fileName
+     * param delete     description: 下载文件流
      *                   author: alex
      *                   return: java.io.InputStream
      */
@@ -224,7 +227,8 @@ public class MinioTemplate implements InitializingBean {
                     inputStream.close();
                 }
             } catch (IOException e) {
-                e.printStackTrace();
+                // AI Agent: 使用SLF4J logger替代printStackTrace
+                log.error("关闭文件流异常：", e);
             }
         }
         return inputStream;
@@ -248,7 +252,8 @@ public class MinioTemplate implements InitializingBean {
                 objectItems.add(objectItem);
             }
         } catch (Exception e) {
-            e.printStackTrace();
+            // AI Agent: 使用SLF4J logger替代printStackTrace
+            log.error("查看文件对象异常：", e);
             return null;
         }
         return objectItems;
